# RA_weather_agentic

./: .gitignore  ARCHITECTURE.md  DOCKER_USAGE.md  Dockerfile  Makefile  README.md  USAGE.md  docker-compose.yml  docker_cli.py  env.example  pyproject.toml  run.py  test_models.py
data/: sample_wardrobe.csv
frontend/: Dockerfile  README.md  app.py  run_frontend.py
frontend/.streamlit/: config.toml
utils/: populate_wardrobe.py
wardrobe_db/: chroma.sqlite3
weather_outfit_ai/: app.py  cli.py  config.py  model_info.py  prompts.py
weather_outfit_ai/agents/: conversation_agent.py  design_agent.py  supervisor_agent.py  wardrobe_agent.py  weather_agent.py
weather_outfit_ai/graph/: graph.py  graph_deprecated.py
weather_outfit_ai/models/: schemas.py  state.py
weather_outfit_ai/orchestrator/: outfit_orchestrator.py
weather_outfit_ai/services/: wardrobe_service.py  weather_service.py
